# submoda

./: .gitignore  .mcp.json  .mise.toml  CLAUDE.md  Cargo.toml  README.md  clippy.toml  lefthook.yml  mise.toml  requirements-dev.in  requirements-dev.txt  rustfmt.toml
.kiro/specs/submod-platform/: design.md  spec.json
.kiro/specs/submoda/: requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.serena/: project.yml
.specify/memory/: constitution.md
docs/: specification.md
specs/001-submoda-docs-specification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-submoda-docs-specification/checklists/: requirements.md
specs/001-submoda-docs-specification/contracts/: core-api.json  python-api.json  solver-api.json
submod-bindings-py/: Cargo.toml  pyproject.toml
submod-bindings-py/src/: lib.rs
submod-core/: Cargo.toml
submod-core/src/: lib.rs
submod-io/: Cargo.toml
submod-io/src/: lib.rs
submod-objectives/: Cargo.toml
submod-objectives/src/: lib.rs
submod-service/: Cargo.toml
submod-service/src/: main.rs
submod-solver/: Cargo.toml
submod-solver/src/: lib.rs
