[package]
name = "submod-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace crates
submod-core = { path = "../submod-core" }

# Data I/O
arrow = { workspace = true }
parquet = { workspace = true }

# Parallel processing
rayon = { workspace = true }
crossbeam = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
